--- a/examples/index.html
+++ b/examples/index.html
@@ -59,7 +59,7 @@
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader/dist/babel-browser-build.js"></script>-->
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader"></script>-->
 <script src='./../dist/bundles/index.umd.js' crossorigin='anonymous'></script>
-<script src='https://unpkg.com/@devmehq/react-qr-code@1.0.0/dist/bundles/index.umd.js' crossorigin='anonymous'></script>
+<script src='https://unpkg.com/@devmehq/react-qr-code@latest/bundles/index.umd.js' crossorigin='anonymous'></script>
 <!-- Load our React component. -->
 <script type='text/babel' src='app.jsx'></script>
 
