chore: update pkg

--- a/examples/index.html
+++ b/examples/index.html
@@ -58,7 +58,7 @@
 <script src='https://unpkg.com/babel-standalone@latest/babel.min.js'></script>
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader/dist/babel-browser-build.js"></script>-->
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader"></script>-->
-<script src='./../dist/bundles/index.umd.js' crossorigin='anonymous'></script>
+<script src='./../dist/index.js' crossorigin='anonymous'></script>
 <!--<script src='https://unpkg.com/@devmehq/react-qr-code@latest/bundles/index.umd.js' crossorigin='anonymous'></script>-->
 <!-- Load our React component. -->
 <script type='text/babel' src='app.jsx'></script>
