--- a/examples/index.html
+++ b/examples/index.html
@@ -53,8 +53,8 @@
   }
 </script>
 <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-<script src='https://unpkg.com/react@latest/umd/react.development.js' crossorigin></script>
-<script src='https://unpkg.com/react-dom@latest/umd/react-dom.development.js' crossorigin></script>
+<script src='https://unpkg.com/react@18/umd/react.development.js' crossorigin></script>
+<script src='https://unpkg.com/react-dom@18/umd/react-dom.development.js' crossorigin></script>
 <script src='https://unpkg.com/babel-standalone@latest/babel.min.js'></script>
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader/dist/babel-browser-build.js"></script>-->
 <!--<script nomodule src="https://unpkg.com/browser-es-module-loader"></script>-->
